// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSkeleton Component should allow variations in table layout: borders and table header row removed 1`] = `
<Table
  ariaLabel="t(curiosity-inventory.tableSkeletonAriaLabel)"
  borders={false}
  className="curiosity-skeleton-table "
  columnHeaders={
    Array [
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
    ]
  }
  isHeader={false}
  rows={
    Array [
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant={null}
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: className and variant 1`] = `
<Table
  ariaLabel="t(curiosity-inventory.tableSkeletonAriaLabel)"
  borders={false}
  className="curiosity-skeleton-table lorem-ipsum-class"
  columnHeaders={
    Array [
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
    ]
  }
  isHeader={false}
  rows={
    Array [
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`TableSkeleton Component should allow variations in table layout: column and row count  1`] = `
<Table
  ariaLabel="t(curiosity-inventory.tableSkeletonAriaLabel)"
  borders={true}
  className="curiosity-skeleton-table "
  columnHeaders={
    Array [
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
      <Skeleton
        isDark={false}
        size="md"
      />,
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant={null}
/>
`;

exports[`TableSkeleton Component should render a non-connected component: non-connected 1`] = `
<Table
  ariaLabel="t(curiosity-inventory.tableSkeletonAriaLabel)"
  borders={true}
  className="curiosity-skeleton-table "
  columnHeaders={
    Array [
      <Skeleton
        isDark={false}
        size="md"
      />,
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
      Object {
        "cells": Array [
          <Skeleton
            isDark={false}
            size="md"
          />,
        ],
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant={null}
/>
`;
